# rpi-screenbrightness-mqtt

./: README.md  install.sh  pyproject.toml  setup.py
assets/: rpi_screenbrightness_mqtt.conf  rpi_screenbrightness_mqtt.service  rpi_screenbrightness_mqtt_service.conf
rpi_screenbrightness_mqtt/: run.py
